Bug 1340145 - Don't allow HTML comments in module scripts r=anba