js/src/jsapi.h
@@ -3828,6 +3828,7 @@ class JS_FRIEND_API(TransitiveCompileOptions)
         forceAsync(false),
         installedFile(false),
         sourceIsLazy(false),
+        allowHTMLComments(true),
         introductionType(nullptr),
         introductionLineno(0),
         introductionOffset(0),
@@ -3864,6 +3865,7 @@ class JS_FRIEND_API(TransitiveCompileOptions)
     bool forceAsync;
     bool installedFile;  // 'true' iff pre-compiling js file in packaged app
     bool sourceIsLazy;
+    bool allowHTMLComments;
 
     // |introductionType| is a statically allocated C string:
     // one of "eval", "Function", or "GeneratorFunction".
